<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_time"
            android:textSize="70sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:padding= "10dp"
            android:shadowColor="#333333"
            android:shadowRadius="3"
            android:shadowDx="2"
            android:shadowDy="2"
            android:fontFamily="@font/moondance_regular"
            android:gravity="center"
            />
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/plant_login_icon"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/register_greet"
            android:textSize="25sp"
            android:textColor="@color/text"
            android:gravity="center"
            android:fontFamily="@font/delius_regular"/>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:textColor=""
            android:textColorHint="@color/text"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="57dp"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:textColor="@color/text"
                android:fontFamily="@font/delius_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:gravity="center"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/delius_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"
            android:hint="@string/confirm_password"
            android:padding="15dp"
            android:textColor="@color/text"
            android:textColorHint="@color/text"
            android:gravity="center"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:drawableStart="@drawable/lock"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/text"
                android:textSize="20sp"
                android:fontFamily="@font/delius_regular"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/text"
            android:text="@string/register_button"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintVertical_bias="1.0"
            android:fontFamily="@font/delius_regular"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:text="@string/switch_to_login"
            android:textStyle="bold"
            android:fontFamily="@font/delius_regular"/>
    </LinearLayout>

</RelativeLayout>