<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login"
    android:background="@drawable/login_background"
    android:gravity="center"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding= "10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/greeting"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/plant_login_icon"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:background="@drawable/button_border"
            android:padding="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_height="57dp"
                android:layout_width="match_parent"
                android:textSize="20sp"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:textColor="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_border"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:gravity="center"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:drawableStart="@drawable/baseline_account_box_24"
                android:drawablePadding="8dp"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:text="@string/login_button"
            android:textColor="@color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintVertical_bias="1.0" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:text="@string/forget_password"/>
    </LinearLayout>

</RelativeLayout>