<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/homepage"
    android:background="@drawable/login_background"
    android:padding="16dp"
    tools:context="com.mycompany.sma.ui.HomepageActivity">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        >
    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/plant_login_icon"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_menu"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textColor="@color/text"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:gravity="center">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="UPLOAD PLANT'S PICTURE"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:gravity="center"
        android:id="@+id/uploadPlant"
        />

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_add_a_photo_24"
            android:id="@+id/plantImageView"/>
        <TextView
            android:id="@+id/plantNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Plant Name"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="320dp"
        app:cardElevation="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/soilMoisture"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#084734"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/moisture"
                android:fontFamily="@font/delius_regular"
                android:textSize="25sp"
                android:textColor="#E2FBCE" />
            <TextView
                android:id="@+id/soilMoistureValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDEDB3"
                android:gravity="center"
                android:padding="8dp"
                android:textSize="50sp"
                android:fontFamily="@font/tenderness_mk7v"
                android:text=""
                android:textColor="@color/text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="430dp"
        app:cardElevation="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#084734"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/temperature"
                android:fontFamily="@font/delius_regular"
                android:textSize="23sp"
                android:textColor="#E2FBCE" />
            <TextView
                android:id="@+id/temperatureValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDEDB3"
                android:gravity="center"
                android:padding="8dp"
                android:text=""
                android:textSize="50sp"
                android:fontFamily="@font/tenderness_mk7v"
                android:textColor="@color/text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="540dp"
        app:cardElevation="4dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#084734"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/humidity"
                android:fontFamily="@font/delius_regular"
                android:textSize="25sp"
                android:textColor="#E2FBCE" />
            <TextView
                android:id="@+id/humidityValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#CDEDB3"
                android:gravity="center"
                android:padding="8dp"
                android:text=""
                android:textSize="50sp"
                android:fontFamily="@font/tenderness_mk7v"
                android:textColor="@color/text" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>